fix(#1586): reduce gap between sidebar and blog post list

--- a/antora-ui-camel/src/css/blog.css
+++ b/antora-ui-camel/src/css/blog.css
@@ -279,6 +279,10 @@ article.blog p {
   .blog.list {
     flex-direction: row;
   }
+
+  main.blog.list {
+    margin-left: 0;
+  }
 }
 
 .blog ul,
